[package]
name = "mirae_server"
version = "0.1.0"
authors = ["AmethystGear <shivenbhatt@outlook.com>"]
edition = "2018"

[dependencies]
serde_jacl = "0.3.1"
rand = "0.7.3"
serde_json = "1.0.57"
websocket = "0.26.2"
serde = { version = "1.0.116", features = ["derive"] }
lazy_static = "1.4.0"
anyhow = "1.0.33"
thiserror = "1.0.21"