[package]
name = "mirae_server"
version = "0.1.0"
authors = ["AmethystGear <shivenbhatt@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_jacl = "*"
rand = "*"
serde_json = "*"
websocket = "*"
serde = { version = "*", features = ["derive"] }
anyhow = "*"
bimap = "*"
image = "*"
crossbeam = "*"

# WOW, lexical-core is broken on the latest nightly. Spectacular.
[patch.crates-io]
lexical-core = {git = 'https://github.com/Gelbpunkt/rust-lexical', branch = 'fix-warnings-and-update-deps'}